--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ crate-type = ["cdylib", "rlib"]
 getrandom = { version = "0.2", features = ["wasm-bindgen"] }
 rand = "0.8"
 wasm-bindgen = "0.2"
+web-sys = {version = "0.3.46", features =["console"]}
 
 # Dependencies for native only.
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
