--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ getrandom = { version = "0.2", features = ["wasm-bindgen"] }
 rand = { version="0.8.4", default-features = false , features=["small_rng"]}
 wasm-bindgen = "0.2"
 web-sys = {version = "0.3.46", features =["console"]}
+wee_alloc = "0.4"
 
 # Dependencies for native only.
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
