--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,23 @@ license = "MIT"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
+[profile.release]
+lto = "thin"
+opt-level = 'z'
+debug = true
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
+
+[package.metadata.wasm-pack.profile.release.wasm-bindgen]
+debug-js-glue = false
+demangle-name-section = true
+dwarf-debug-info = false
+
 # Dependencies for all targets go here.
 [dependencies]
 bevy_ecs = "0.6.1"
+console_error_panic_hook = "0.1.7"
 getrandom = { version = "0.2", features = ["wasm-bindgen"] }
 rand = { version = "0.8.4", default-features = false, features = ["small_rng"] }
 wasm-bindgen = "0.2"
@@ -36,6 +50,3 @@ bevy = { version = "0.6.1", default-features = false, features = [
   "render"
 ] }
 
-[profile.release]
-lto = "thin"
-opt-level = 'z'
